# CrossyRoadGameRecreation

./: 2022li1g062.cabal  LI12223.hs  README.md
doc/html/: LI12223.html  Main.html  Tarefa1_2022li1g062.html  Tarefa1_2022li1gXXX.html  Tarefa2_2022li1g062.html  Tarefa2_2022li1gXXX.html  Tarefa3_2022li1g062.html  Tarefa3_2022li1gXXX.html  Tarefa4_2022li1g062.html  Tarefa4_2022li1gXXX.html  Tarefa5_2022li1g062.html  doc-index.html  index.html
src/: LI12223.hs  Main.hs  Tarefa1_2022li1g062.hs  Tarefa2_2022li1g062.hs  Tarefa3_2022li1g062.hs  Tarefa4_2022li1g062.hs  Tarefa5_2022li1g062.hs  Tarefa6_2022li1g062.hs
src/doc/html/: Tarefa2_2022li1g062.html  Tarefa3_2022li1g062.html  doc-index.html
tests/: Spec.hs  Tarefa1_2022li1g062_Spec.hs  Tarefa2_2022li1g062_Spec.hs  Tarefa3_2022li1g062_Spec.hs  Tarefa4_2022li1g062_Spec.hs  Tarefa5_2022li1g062_Spec.hs  aula.hs
